# l1-rotation-averaging

./: .gitignore  README.md  pyproject.toml
l1_rotation_averaging/: __init__.py  averager.py
