[project]
name = "l1-rotation-averaging"
authors = [{ name = "Marco Toschi", email = "marco.toschi@eyecan.ai" }]
description = "L1 Rotation Averaging Package"
readme = "README.md"
license = { text = "Proprietary License" }
requires-python = ">=3.9, <3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
keywords = ["rotation averaging", "l1", "l1-rotation-averaging"]
dependencies = [
    "typer>=0.9.0",
    "visu3d>=1.5.3",
    "plotly>=5.16.1",
    "scipy>=1.10.0",
    "numpy==1.23.5",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
dev = ["black"]
build = ["hatch", "build"]
docs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.version]
path = "l1_rotation_averaging/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
l1-rotation-averaging = "l1_rotation_averaging:app"

[tool.ruff]
ignore = ["F401", "F841"]

[tool.pytest.ini_options]
required_plugins = "pytest-cov"
addopts = "--cov=calibry --cov-report html --cov-report term-missing"
tmp_path_retention_policy = "failed"
